...
        
        let verticalCenter: CGFloat = UIScreen.main.bounds.midY
        let horizontalCenter: CGFloat = UIScreen.main.bounds.midX
        
        let takePhotoButton = UIButton(frame: CGRect(origin: CGPoint(), size: CGSize(width : 240, height : 40)))
        takePhotoButton.backgroundColor = UIColor.lightGray
        takePhotoButton.setTitle("Take Photo", for: .normal)
        takePhotoButton.titleLabel?.font = UIFont(name : (takePhotoButton.titleLabel?.font.familyName)!, size : 24)
        takePhotoButton.addTarget(self, action: #selector(transitionToCamera), for: .touchUpInside)
        takePhotoButton.center = CGPoint(x: horizontalCenter, y: verticalCenter-80)

        self.view.addSubview(takePhotoButton)
        
...
